--- a/estilos/style.css
+++ b/estilos/style.css
@@ -84,7 +84,7 @@ section#ficha img.foto {
   outline: 5px solid var(--destaque);
   display: block;
   margin: auto;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
 
 section#ficha h1, section#ficha h2 {
@@ -98,13 +98,18 @@ section#ficha h2 {
   font-size: 0.9em;
 } 
 
+section#ficha p {
+  margin: 20px 0;
+  font-size: 1.1em;
+}
+
 div#social {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5em;
+  font-size: 1.6em;
   gap: 1em;
-  margin-top: 15px;
+  margin-top: 30px;
 }
 
 div#social a {
@@ -130,4 +135,45 @@ article {
 article h2 {
   color: var(--destaque);
   margin-bottom: 10px;
+}
+
+#skill-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
+}
+
+#skill-container .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#skill-container .nome {
+  font-weight: bold;
+  color: var(--texto);
+}
+
+#skill-container ,porcent {
+  font-weight: bold;
+  color: var(--destaque);
+}
+
+#skill-container .barra {
+  width: 100%;
+  height: 8px;
+  background-color: var(--fundo-principal);
+  border-radius: 4px;
+}
+
+#skill-container .progresso {
+  height: 100%;
+  background-color: var(--destaque-inverso);
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  #skill-container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
