--- a/estilos/style.css
+++ b/estilos/style.css
@@ -98,6 +98,12 @@ section#ficha h2 {
   font-size: 0.9em;
 } 
 
+section#ficha #title {
+  color: var(--destaque);
+  font-weight: 600;
+  margin: 20px 0;
+}
+
 section#ficha p {
   margin: 20px 0;
   font-size: 1.1em;
@@ -172,8 +178,71 @@ article h2 {
   border-radius: 4px;
 }
 
+#formacao-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 20px;
+}
+
+#formacao-container .curso {
+  background-color: var(--fundo-principal);
+  border-radius: 8px;
+  border-left: 5px solid var(--destaque-inverso);
+  padding-left: 15px;
+  transition: border-width 0.5s, border-color 0.5s;
+}
+
+#formacao-container .curso:hover {
+  border-left-width: 15px;
+  border-color: var(--destaque);
+  cursor: pointer;
+}
+
+#formacao-container .periodo {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: var(--texto);
+}
+
+#formacao-container .instituicao {
+  color: var(--destaque-inverso);
+  font-size: 1.1em;
+}
+
+#projeto-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 20px;
+}
+
+#projeto-container .projeto {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 10px;
+  background-color: var(--fundo-principal);
+  border-radius: 8px;
+  border-left: 8px solid var(--destaque-inverso);
+  transition: border-width 0.5s, border-color 0.5s;
+}
+
+#projeto-container .projeto:hover {
+  border-left-width: 15px;
+  border-color: var(--destaque);
+  cursor: pointer;
+}
+
+#projeto-container iframe#cordel {
+  width: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
 @media screen and (min-width: 768px) {
   #skill-container {
     grid-template-columns: 1fr 1fr;
   }
 }
+
