--- a/estilos/style.css
+++ b/estilos/style.css
@@ -222,7 +222,7 @@ article h2 {
   padding: 10px;
   background-color: var(--fundo-principal);
   border-radius: 8px;
-  border-left: 8px solid var(--destaque-inverso);
+  border-left: 5px solid var(--destaque-inverso);
   transition: border-width 0.5s, border-color 0.5s;
 }
 
@@ -232,7 +232,7 @@ article h2 {
   cursor: pointer;
 }
 
-#projeto-container iframe#cordel {
+#projeto-container .foto {
   width: 100%;
   aspect-ratio: 16/9;
   object-fit: cover;
@@ -240,9 +240,46 @@ article h2 {
   border-radius: 8px;
 }
 
+#projeto-container p {
+  padding: 20px 0;
+  line-height: 1.6em;
+}
+
+footer {
+  background-color: var(--destaque);
+  color: var(--texto-inverso);
+  text-align: center;
+  padding: 15px;
+}
+
+footer a {
+  color: var(--texto-inverso);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: var(--destaque-inverso);
+}
+
 @media screen and (min-width: 768px) {
   #skill-container {
     grid-template-columns: 1fr 1fr;
   }
+
+  #projeto-container .projeto {
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+#projeto-container .projeto-info {
+  max-width: 80%;
+}
+
+#projeto-container .foto {
+  aspect-ratio: 1/1;
+  max-width: 20%;
+  max-height: 200px;
+}
 }
 
