--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,8 @@ header {
   display: flex;
   justify-content: flex-end;
   align-content: center;
+  position: sticky;
+  top: 0px;
 }
 
 nav#menu ul{
