--- a/estilos/style.css
+++ b/estilos/style.css
@@ -89,26 +89,17 @@ section#ficha img.foto {
   margin-bottom: 30px;
 }
 
-section#ficha h1, section#ficha h2 {
+section#ficha h1 {
   color: var(--destaque);
   margin: 0;
   font-size: 1.5em;
   text-align: left;
 }
 
-section#ficha h2 {
-  font-size: 0.9em;
-} 
-
-section#ficha #title {
+section#ficha span#title {
   color: var(--destaque);
   font-weight: 600;
-  margin: 20px 0;
-}
-
-section#ficha p {
-  margin: 20px 0;
-  font-size: 1.1em;
+  font-size: 0.9em;
 }
 
 div#social {
@@ -118,6 +109,10 @@ div#social {
   font-size: 1.6em;
   gap: 1em;
   margin-top: 30px;
+}
+
+section#ficha p {
+  margin: 20px 0;
 }
 
 div#social a {
@@ -265,6 +260,30 @@ footer a:hover {
 }
 
 @media screen and (min-width: 768px) {
+
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+  }
+  main {
+    margin-top: 65px;
+    grid-template-columns: auto  300px 1fr auto;
+  }
+
+  section#ficha {
+    grid-column: 2 / 3;
+    height: fit-content;
+    position: sticky;
+    top: 65px;
+  }
+
+  section#detalhes {
+    grid-column: 3 / 4;
+  }
+
   #skill-container {
     grid-template-columns: 1fr 1fr;
   }
