--- a/estilos/style.css
+++ b/estilos/style.css
@@ -237,15 +237,15 @@ article h2 {
 #projeto-container .projeto:hover {
   border-left-width: 15px;
   border-color: var(--destaque);
-  cursor: pointer;
 }
 
-#projeto-container .foto {
+#projeto-container a > .foto {
   width: 100%;
   aspect-ratio: 16/9;
   object-fit: cover;
   overflow: hidden;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 #projeto-container p {
@@ -309,13 +309,14 @@ footer a:hover {
 }
 
 #projeto-container .projeto-info {
-  max-width: 80%;
+  max-width: 60%;
 }
 
-#projeto-container .foto {
-  aspect-ratio: 1/1;
-  max-width: 20%;
+#projeto-container a > .foto {
+  width: 100%;
+  aspect-ratio: 16/9;
   max-height: 200px;
+  cursor: pointer;
 }
 }
 
